--- a/src/app/features/components/file-browser/remote/remote-about-modal.component.html
+++ b/src/app/features/components/file-browser/remote/remote-about-modal.component.html
@@ -94,8 +94,8 @@
                 </div>
                 <div class="info-row">
                   <span class="info-label">Root Path</span>
-                  <span class="info-value code-font" [matTooltip]="getRoot(about) | normalizePath">
-                    {{ getRoot(about) | normalizePath }}
+                  <span class="info-value code-font" [matTooltip]="getRoot(about)">
+                    {{ getRoot(about) }}
                   </span>
                 </div>
                 <div class="info-row">
