--- a/src/app/features/components/file-browser/nautilus/nautilus.component.scss
+++ b/src/app/features/components/file-browser/nautilus/nautilus.component.scss
@@ -689,9 +689,15 @@ mat-nav-list {
   }
 
   h2 {
-    font-weight: 500;
+    font-weight: 700;
     color: var(--app-text-color);
     opacity: 0.7;
+  }
+
+  p {
+    color: var(--secondary-text-color);
+    max-width: 300px;
+    text-align: center;
   }
 }
 
