--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -9,7 +9,7 @@
     </button>
   </div>
 
-  <div class="modal-content hide-scrollbar" #content (scroll)="onScroll(content)">
+  <div class="modal-content" #content (scroll)="onScroll(content)">
     <img src="assets/rclone.svg" alt="Rclone Logo" class="app-icon" />
     <h2 class="app-name">RClone Manager</h2>
     <p class="app-team">
