--- a/src/app/features/modals/monitoring/logs-modal/logs-modal.component.html
+++ b/src/app/features/modals/monitoring/logs-modal/logs-modal.component.html
@@ -48,10 +48,10 @@
         <mat-icon [class.spinning]="loading()" svgIcon="refresh"></mat-icon>
       </button>
       <button mat-icon-button (click)="scrollToTop()" matTooltip="Scroll Top">
-        <mat-icon svgIcon="arrow-up"></mat-icon>
+        <mat-icon svgIcon="chewron-up"></mat-icon>
       </button>
       <button mat-icon-button (click)="scrollToBottom()" matTooltip="Scroll Bottom">
-        <mat-icon svgIcon="arrow-down"></mat-icon>
+        <mat-icon svgIcon="chewron-down"></mat-icon>
       </button>
     </div>
   </div>
